# RAG

.github/docker/: rag.Dockerfile
.github/workflows/: rag.yml
libs/data-access/: README.md  mypy.ini  pyproject.toml
libs/data-access/data_access/: __init__.py  errors.py  settings.py  utils.py
libs/data-access/data_access/firestore/asynchronous/: __init__.py  dao.py  lock.py  schemas.py
libs/data-access/data_access/firestore/synchronous/: dao.py  schemas.py
libs/data-access/tests/: conftest.py  test_data_access_version.py
libs/data-access/tests/bigquery/: test_join_queries.py
libs/data-access/tests/firestore/: test_firestore_async.py
libs/data-access/tests/gcstorage/: test_get_cloud_storage_obj.py
libs/data-access/tests/pubsub/: test_pubsub.py
libs/embed/: pyproject.toml
libs/embed/embed/: base.py  errors.py  schema.py
libs/embed/embed/cohere/: __init__.py  schema.py  service.py
libs/embed/embed/openai/: __init__.py  schema.py  service.py
libs/embed/notebooks/: benchmark.ipynb
projects/rag/: pyproject.toml
projects/rag/rag/: api.py  dependencies.py  logger.py  main.py  settings.py
projects/rag/rag/document/: dao.py  dependencies.py  error.py  schema.py  view.py
projects/rag/rag/document/service/: chunker.py  handler.py
